<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/light_gray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_head"
            android:layout_marginTop="30dp"
            android:text="Please enter your details to register"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_full_name"
            android:layout_below="@id/textView_register_head"
            android:text="Full Name*"
            android:textColor="#555555"
            android:padding="6dp"
            android:textSize="16sp"
            android:layout_marginTop="50dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_register_full_name"
            android:hint="Enter your full name"
            android:inputType="textPersonName"
            android:textSize="16sp"
            android:padding="6dp"
            android:layout_below="@id/textView_register_full_name"
            android:background="@drawable/border"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_email"
            android:layout_below="@id/textView_register_full_name"
            android:text="Email*"
            android:textColor="#555555"
            android:padding="6dp"
            android:textSize="16sp"
            android:layout_marginTop="45dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_register_email"
            android:hint="Enter your email"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:padding="6dp"
            android:layout_below="@id/textView_register_email"
            android:background="@drawable/border"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_dob"
            android:layout_below="@id/textView_register_email"
            android:text="Date of Birth (mm/dd/yyyy)*"
            android:textColor="#555555"
            android:padding="6dp"
            android:textSize="16sp"
            android:layout_marginTop="45dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_register_dob"
            android:hint="Enter your date of birth (mm/dd/yyyy)"
            android:inputType="date"
            android:textSize="16sp"
            android:padding="6dp"
            android:layout_below="@id/textView_register_dob"
            android:background="@drawable/border"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_password"
            android:layout_below="@id/textView_register_dob"
            android:text="Password*"
            android:textColor="#555555"
            android:padding="6dp"
            android:textSize="16sp"
            android:layout_marginTop="45dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_register_password"
            android:hint="Enter your password"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:padding="6dp"
            android:layout_below="@id/textView_register_password"
            android:background="@drawable/border"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_confirm_password"
            android:layout_below="@id/textView_register_password"
            android:text="Confirm Password*"
            android:textColor="#555555"
            android:padding="6dp"
            android:textSize="16sp"
            android:layout_marginTop="45dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_register_confirm_password"
            android:hint="Confirm your password"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:padding="6dp"
            android:layout_below="@id/textView_register_confirm_password"
            android:background="@drawable/border"/>

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_below="@id/editText_register_confirm_password"
            android:layout_marginTop="50dp"
            android:text="Register"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:elevation="10dp"
            android:visibility="gone" />

    </RelativeLayout>

</ScrollView>


